--- a/bài tập/img/Tao.html
+++ b/bài tập/img/Tao.html
@@ -8,8 +8,8 @@
 <body>
 	<img src="http://kleverfruits.com.vn/images/products/original/35647294_1321767781291305_7902438824741961728_o_1529397978.jpg" title="Táo Kukiku New Zealand" />
 </br>
-	<a href="trangchu.html" >Trang chủ</a>
-	<a href="trangchu.html" >Các hoa quả khác</a>
+	<a href="index.html" >Trang chủ</a>
+	<a href="index.html" >Các hoa quả khác</a>
 
 <h2>1.    Giống và chủng loại</h2>
 
