--- a/bài tập/img/cam.html
+++ b/bài tập/img/cam.html
@@ -8,8 +8,8 @@
 <body>
 	<img src="http://kleverfruits.com.vn/images/products/large/dsc_0484_1532059837.png" class="anh2" />
 </br>
-	<a href="trangchu.html" >Trang chủ</a>
-	<a href="trangchu.html" >Các hoa quả khác</a>
+	<a href="index.html" >Trang chủ</a>
+	<a href="index.html" >Các hoa quả khác</a>
 
 <h2>1.    Giống và chủng loại</h2>
 
