--- a/bài tập/img/hong.html
+++ b/bài tập/img/hong.html
@@ -8,8 +8,8 @@
 <body>
 	<img src="http://ninhco.com/uploads/images/hong-kho-sangju-han-quoc.jpg" />
 </br>
-	<a href="trangchu.html" >Trang chủ</a>
-	<a href="trangchu.html" >Các hoa quả khác</a>
+	<a href="index.html" >Trang chủ</a>
+	<a href="index.html" >Các hoa quả khác</a>
 	
 <h2>1.  Giới thiệu Hồng khô Sangju Hàn Quốc</h2>
 
