--- a/bài tập/img/taomy.html
+++ b/bài tập/img/taomy.html
@@ -8,8 +8,8 @@
 <body>
 	<img src="http://ninhco.com/uploads/images/tao-rosalynn-my.jpg" class="anh2" />
 </br>
-	<a href="trangchu.html" >Trang chủ</a>
-	<a href="trangchu.html" >Các hoa quả khác</a>
+	<a href="index.html" >Trang chủ</a>
+	<a href="index.html" >Các hoa quả khác</a>
 
 <h2>1.    Giống và chủng loại</h2>
 
