--- a/bài tập/img/nho my xanh.html
+++ b/bài tập/img/nho my xanh.html
@@ -8,8 +8,8 @@
 <body>
 	<img src="http://kleverfruits.com.vn/upload_images/images/7(1).png" />
 </br>
-	<a href="trangchu.html" >Trang chủ</a>
-	<a href="trangchu.html" >Các hoa quả khác</a>
+	<a href="index.html" >Trang chủ</a>
+	<a href="index.html" >Các hoa quả khác</a>
 
 <h2>1.  Giống và chủng loại</h2>
 
