--- a/bài tập/img/nho my.html
+++ b/bài tập/img/nho my.html
@@ -8,8 +8,8 @@
 <body>
 	<img src="http://media.bizwebmedia.net/Sites/99161/data/upload/2015/6/nho_den_my.jpg?0" title="Nho Đen không hạt Mỹ" class="anh2" />
 </br>
-	<a href="trangchu.html" >Trang chủ</a>
-	<a href="trangchu.html" >Các hoa quả khác</a>
+	<a href="index.html" >Trang chủ</a>
+	<a href="index.html" >Các hoa quả khác</a>
 
 <h2>1.    Giống và chủng loại</h2>
 
