--- a/bài tập/img/index.html
+++ b/bài tập/img/index.html
@@ -16,7 +16,7 @@
 
 	<div class="Cherry">
 		
-		<a href="Cherry.html" ><img src="http://kleverfruits.com.vn/images/products/original/dsc_0370_1531735213.png" />Cherry Supperbig Organic </a>
+		<a href="cherry.html" ><img src="http://kleverfruits.com.vn/images/products/original/dsc_0370_1531735213.png" />Cherry Supperbig Organic </a>
 	</div>
 
 	<div class="dua">
