--- a/bài tập 6.4/img4/trangchu.html
+++ b/bài tập 6.4/img4/trangchu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Album Ảnh</title>
+	<title>Trang chủ</title>
 	<meta charset="UTF-8"/>
 	<link rel="stylesheet" type="text/css" href="../css4/style.css">
   <link rel="stylesheet" type="text/css" href="../css4/gallery.css">
@@ -14,11 +14,11 @@
     </div>
     <div id="main-menu">  
       <a href="#"><img src="avt.jpg"></a>
-      <a href="trangchu.html">Trang chủ</a>
+      <a href="trangchu.html" class="active">Trang chủ</a>
 
       <a href="about.html">Giới thiệu</a>
       
-      <a href="gallery.html"class="active">Album Ảnh </a>
+      <a href="gallery.html">Album Ảnh </a>
       
       <a href="post.html">Bài đăng</a>
     </div>
