--- a/bài tập 6.4/img4/trangchu.html
+++ b/bài tập 6.4/img4/trangchu.html
@@ -14,6 +14,7 @@
     </div>
     <div id="main-menu">  
       <a href="#"><img src="avt.jpg"></a>
+      <div id="menu">
       <a href="trangchu.html" class="active">Trang chủ</a>
 
       <a href="about.html">Giới thiệu</a>
@@ -21,6 +22,7 @@
       <a href="gallery.html">Album Ảnh </a>
       
       <a href="post.html">Bài đăng</a>
+      </div>
     </div>
 
     <h1>Top 9 em gái đẹp nhất anime</h1>
