--- a/bài tập 6.4/img4/trangchu.html
+++ b/bài tập 6.4/img4/trangchu.html
@@ -14,7 +14,7 @@
     </div>
     <div id="main-menu">  
       <a href="#"><img src="avt.jpg"></a>
-      <div id="menu">
+      <div class="menu" >
       <a href="trangchu.html" class="active">Trang chủ</a>
 
       <a href="about.html">Giới thiệu</a>
