--- a/bài tập 6.4/img4/trangchu.html
+++ b/bài tập 6.4/img4/trangchu.html
@@ -13,15 +13,15 @@
       <img src="banner.png" id="banner" title="Những hình ảnh anime đẹp" alt="Ảnh đẹp lắm" />
     </div>
     <div id="main-menu">  
-      <a href="#"><img src="avt.jpg"></a>
+      <a href="#"><img src="avt.jpg" title="avt" alt="avt"></a>
       <div class="menu" >
-      <a href="trangchu.html" class="active">Trang chủ</a>
+        <a href="trangchu.html" class="active">Trang chủ</a>
 
-      <a href="about.html">Giới thiệu</a>
-      
-      <a href="gallery.html">Album Ảnh </a>
-      
-      <a href="post.html">Bài đăng</a>
+        <a href="about.html">Giới thiệu</a>
+
+        <a href="gallery.html">Album Ảnh </a>
+
+        <a href="post.html">Bài đăng</a>
       </div>
     </div>
 
@@ -30,7 +30,7 @@
     <div id="main-content">
       <div class="box info">
 
-        <img src="http://file.vforum.vn/hinh/2018/02/top-nhung-hinh-anime-dep-nhat-de-thuong-hinh-nen-anime-2.png"alt="Adair" title="Adair" />
+        <img src="http://file.vforum.vn/hinh/2018/02/top-nhung-hinh-anime-dep-nhat-de-thuong-hinh-nen-anime-2.png" alt="Adair" title="Adair"/>
         <div>
 
           <h2>Thông tin cơ bản</h2>
