--- a/BOM/index.html
+++ b/BOM/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
 	<div id = "warp">
-		<div id="content" class="content">
+		<div id="hien">
+			<h1>Bạn có thể vượt qua thử thách của chúng tôi không?</h1>
+			<h1>Bạn không đủ khả năng đâu</h1>
+			<h1>Muốn thử hãy click vào đây</h1>
+			
+			<img src="https://media.istockphoto.com/vectors/start-icon-vector-id516367852?k=6&m=516367852&s=612x612&w=0&h=6XBKXZB0_xIClabwpvFvrvpXFTLHYosHEKqo8YO5S90=" height="200px" onclick = "start1()">
+		</div>
+		<div id="content" class="content" style="display: none">
 			<div id="header">
 				<h1>Tuổi gì qua</h1>
 			</div>
