--- a/BT nhạc/index.html
+++ b/BT nhạc/index.html
@@ -98,25 +98,25 @@
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""> <img src="/img/slide1.jpg" style="width:100px" alt="Buồn của anh"></a>
+                                <a href=""> <img src="./img/slide1.jpg" style="width:100px" alt="Buồn của anh"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>Buồn của Anh</p><p>K-ICM x Đạt G x Masew</p></a>
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""> <img src="/img/slide2.jpg" style="width:100px" alt="Buồn của Em"></a>
+                                <a href=""> <img src="./img/slide2.jpg" style="width:100px" alt="Buồn của Em"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>Buồn Không Em</p><p>Đạt G x Du Uyên</p></a>
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""> <img src="/img/slide3.jpg" style="width:100px" alt="In My Falling"></a>
+                                <a href=""> <img src="./img/slide3.jpg" style="width:100px" alt="In My Falling"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>In My Falling</p> <p>Drake</p></a>
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""> <img src="/img/slide4.jpg" style="width:100px" alt="Girl Like You"></a>
+                                <a href=""> <img src="./img/slide4.jpg" style="width:100px" alt="Girl Like You"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>Girl Like You</p> <p>Maroon 5 If Cardi B</p></a>
                                 </div>
@@ -124,31 +124,31 @@
                         </div>
                         <div class="bh">
                             <div class="bh1">
-                                <a href=""> <img src="/img/slide5.jpg" style="width:100px" alt="Tận Cùng Nỗi Nhớ"></a>
+                                <a href=""> <img src="./img/slide5.jpg" style="width:100px" alt="Tận Cùng Nỗi Nhớ"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>Tận Cùng Nỗi Nhớ</p> <p>Will</p></a>
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""> <img src="/img/bh2.jpg" style="width:100px" alt="Ừ có Anh đây"></a>
+                                <a href=""> <img src="./img/bh2.jpg" style="width:100px" alt="Ừ có Anh đây"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>Ừ có Anh đây</p> <p>Tino</p></a>
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""> <img src="/img/bh3.jpg" style="width:100px" alt="Send It"></a>
+                                <a href=""> <img src="./img/bh3.jpg" style="width:100px" alt="Send It"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>Send It</p><p>Austin Mahone</p></a>
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""><img src="/img/bh4.jpg" style="width:100px" alt="That Girl"></a>
+                                <a href=""><img src="./img/bh4.jpg" style="width:100px" alt="That Girl"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>That Girl</p> <p>Olly Murs</p></a>
                                 </div>
                             </div>
                             <div class="bh1">
-                                <a href=""><img src="/img/bh5.jpg" style="width:100px" alt="Way Back Home"></a>
+                                <a href=""><img src="./img/bh5.jpg" style="width:100px" alt="Way Back Home"></a>
                                 <div class = "bh2">
                                     <a href=""> <p>Way Back Home</p><p>Shaun</p></a>
                                 </div>
