--- a/BT nhạc/index.html
+++ b/BT nhạc/index.html
@@ -77,7 +77,7 @@
                     </div>
                     
                 </div>
-                <div class="album">
+                <div class="album" style="width = 100%">
                     <p class="title">NGHỆ SĨ NỔI BẬT</p>
                     <div style="display:flex;" >
                         <div class="casi"><a href=""><img  src="img/casi1.jpg" ></a></div>
