--- a/BT nhạc/index.html
+++ b/BT nhạc/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="album" style="width = 100%">
                     <p class="title">NGHỆ SĨ NỔI BẬT</p>
-                    <div style="display:flex;" >
+                    <div class="casi1">
                         <div class="casi"><a href=""><img  src="img/casi1.jpg" ></a></div>
                         <div class="casi"><a href=""><img  src="img/casi2.jpg" ></a></div>
                         <div class="casi"><a href=""><img  src="img/casi3.jpg" ></a></div>
