cập nhật bài form

--- a/game/index.html
+++ b/game/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <canvas id="my-canvas"></canvas>
+    <canvas id="my-canvas" style="margin: 10% 0 0 30%"></canvas>
      <script src="script.js"></script>
 </body>
 </html>
